# algorithm-arena

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: demo_visualization.py
src/algorithm_arena/: __init__.py
src/algorithm_arena/app/: dashboard.py  registry.py
src/algorithm_arena/benchmarks/: custom.py  functions.py
src/algorithm_arena/evaluation/: __init__.py  multi_run.py
src/algorithm_arena/optimizers/: __init__.py  base.py  cuckoo.py  ga.py  gwo.py  hho.py  pso.py  sa.py
src/algorithm_arena/visualization/: __init__.py  plots.py
tests/: test_benchmarks.py  test_custom_expression.py  test_dashboard.py  test_evaluation.py  test_optimizer_properties.py  test_optimizers.py  test_visualization.py
